Change Log
================================
Cards v1.4.2 Notes
--------------------------------
- Fixed bug where cards with long text went off of the card
- Card decks can now be set using the ini file

Cards v1.4.1 Notes
--------------------------------
- Fixed client so Windows servers will work now.

Cards v1.4.0 Notes
--------------------------------
- Full GUI client with all the features of the console client. Changes include ability to display score in HTML table, ability to obtain the round summary, ability to judge, and ability to discard a card after submitting it.
- Drop in Drop out mode enabled; players can freely disconnect and connect to the game. Note that, however, the server will shut down when there is only one player remaining in the game.
- Port is now obtained from a settings.ini file.

Cards v1.2.0 Notes
--------------------------------
- Rudimentary GUI client

Cards v1.1.1 Notes
--------------------------------
- Fixed crash bug
- Ports can now be reused immediately after server shuts down.

Cards v1.1.0 Notes
--------------------------------
- Choose your own port to host the server on!
- More informative output to create an even better playing experience!
- Unfortunately this one was a bad release.

Cards v1.0.2 Notes
--------------------------------
- First official release!
- Play with your friends in local multiplayer!
- Exciting console based input!
- Tons of new features, and tons of fun!