@@ -1,0 +1,5 @@
+[Settings]
+port = 2809
+descriptors = test-adjs.txt
+entities = test-nouns.txt
+
