@@ -3,6 +3,7 @@ Delete "$INSTDIR\*.dll"
 Delete "$INSTDIR\*.zip"
 Delete "$INSTDIR\*.ini"
 Delete "$INSTDIR\*.txt"
+Delete "$INSTDIR\*.log"
 Delete "$INSTDIR\CHANGELOG"
 Delete "$INSTDIR\LICENSE"
 Delete "$INSTDIR\README.md"
